--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-     - images/Helper.png
      - images/emptyList.png
+     - images/logo.png
+     - images/background.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -79,4 +78,4 @@ flutter:
 flutter_icons:
   android: true 
   ios: true
-  image_path: "images/Helper_ico.png"
+  image_path: "images/logo.png"
