--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ flutter:
   assets:
      - images/emptyList.png
      - images/logo.png
-     - images/background.jpg
+     - images/background.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
